--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -1,15 +1,31 @@
 /*
-	Prologue by HTML5 UP
+	Lens by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Button */
+/* Thumbnails */
 
-	input[type="button"],
-	input[type="submit"],
-	input[type="reset"],
-	button,
-	.button {
-		background-image: url("images/ie/grad0-15.svg");
+	#thumbnails:after {
+		content: '';
+		display: block;
+		clear: both;
+	}
+
+	#thumbnails article {
+		float: left;
+	}
+
+/* Viewer */
+
+	#viewer .inner {
+		box-shadow: inset 0 0 9em 2em rgba(16, 16, 16, 0.2);
+	}
+
+		#viewer .inner:before {
+			display: none;
+		}
+
+	#viewer .slide .caption {
+		background-color: rgba(16, 16, 16, 0.5);
 	}
