--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -854,6 +854,7 @@
 		
 	}
 
+
 		#nav ul li a {
 			display: block;
 			color: rgba(255, 255, 255, 0.5);
@@ -955,6 +956,7 @@
 				position: relative;
 				border: 0;
 				outline: 0;
+				padding: 0 0;
 			}
 
 				#thumbnails article .thumbnail img {
