--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -272,10 +272,11 @@
 		cursor: pointer;
 		display: inline-block;
 		line-height: 1;
-		padding: 0.75em 1.5em;
+		padding: 1em 1.5em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
+		margin-top: 0.4em;
 	}
 
 		input[type="submit"]:hover,
@@ -1408,3 +1409,89 @@
 				}
 
 		}
+/*Form*/
+form label {
+		display: block;
+		text-align: left;
+		margin-bottom: 0.5em;
+	}
+	input, textarea, select {
+		font-family: 'Source Sans Pro', sans-serif;
+		font-size: 1em;
+		font-weight: 300;
+		line-height: 1.75em;
+		color: #888;
+
+	}
+
+	form input[type="text"],
+	form input[type="email"],
+	form input[type="password"],
+	form select,
+	form textarea {
+		position: relative;
+		-webkit-appearance: none;
+		display: block;
+		border: 0;
+		outline: 0;
+		background: #fff;
+		background: rgba(255, 255, 255, 0.75);
+		width: 50%;
+		margin:0 25%;
+		border-radius: 0.35em;
+		padding: 0.75em 1em 0.75em 1em;
+		box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
+		border: solid 1px rgba(0, 0, 0, 0.15);
+		-moz-transition: all 0.35s ease-in-out;
+		-webkit-transition: all 0.35s ease-in-out;
+		-ms-transition: all 0.35s ease-in-out;
+		transition: all 0.35s ease-in-out;
+	}
+
+
+		form input[type="text"]:focus,
+		form input[type="email"]:focus,
+		form input[type="password"]:focus,
+		form select:focus,
+		form textarea:focus {
+			box-shadow: 0 0 2px 1px #8ebebc;
+			background: #fff;
+		}
+		form input[type="text"],
+	form input[type="email"],
+	form input[type="password"],
+	form select {
+		line-height: 1.25em;
+	}
+
+	form textarea {
+		min-height: 14em;
+	}
+
+	form .formerize-placeholder {
+		color: #555 !important;
+	}
+
+	form ::-webkit-input-placeholder {
+		color: #555 !important;
+	}
+
+	form :-moz-placeholder {
+		color: #555 !important;
+	}
+
+	form ::-moz-placeholder {
+		color: #555 !important;
+	}
+
+	form :-ms-input-placeholder {
+		color: #555 !important;
+	}
+
+	form ::-moz-focus-inner {
+		border: 0;
+	}
+
+
+
+
