--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1130,6 +1130,7 @@
 
 			.content > section.two {
 				background-color: #f5fafa;
+				padding: 0 1em;
 			}
 
 			.content > section.three {
@@ -1164,7 +1165,8 @@
 		transition: opacity 0.75s ease, width 0.75s ease;
 		position: relative;
 		width: 100%;
-		height: 100%;
+		height: 90vh;
+		margin:5vh 0;
 	}
 
 		#viewer .inner {
